<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Welcome! 고시촌</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_menu">메뉴</string>
    <string name="title_time">영업시간</string>
    <string name="title_seat">좌석수</string>
    <string name="title_tel">전화번호</string>
    <string name="title_address">주소</string>
    <string name="delivery">배달</string>
    <string name="takeout">포장</string>
    <string name="title_etc">기타</string>
    <string name="title_price">가격</string>
    <string name="image">사진</string>

    <color name="bg">#87B940</color>

</resources>